<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="item_crime_title">Crime Title</string>
    <string name="item_crime_date">Crime Date</string>
    <string name="button_set_time">Set Time</string>
    <string name="new_crime">New Crime</string>
    <string name="drop_all">Drop all</string>
    <string name="crime_suspect_text">Choose suspect</string>
    <string name="crime_report_text">Send report</string>
    <string name="crime_report_call">Call</string>
    <string name="crime_report">%s!
        The crime was discovered on %s. %s and %s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">
 Crime scene photo (not set)
 </string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
    <string name="crime_item_description" translatable="false">%s. %s. This crime %s</string>
</resources>